# cpp-fenix-template

./: fenix.json
clang/: Makefile  c_cpp_properties.json
cpp/: Makefile  git.ignore  main.cpp
gpp/: Makefile
pico/: CMakeLists.txt  extensions.json  git.ignore  main.cpp  settings.json
